# minicaldav

./: .dockerignore  .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  Makefile  README.md  cog.toml  devenv.nix  devenv.yaml  publish_ci_container.sh
ci/: .gitlab-ci-containers.yml  setup.sh  x86-64.dockerfile
src/: api.rs  bin.rs  caldav.rs  calendar.rs  component.rs  credentials.rs  errors.rs  ical.rs  lib.rs  vcalendar_props.rs  xml_templates.rs
tests/: caldav.rs  manual.rs
tests/certs/: ca-key.pem  ca.pem  ca.srl  localhost-cert.pem  localhost-key.pem  localhost.csr
tests/responses/: calendar_ABC0815.xml  calendar_ABC0816.xml  calendars_response.xml  home_set_response.xml  principal_response.xml  propfind_response_without_principal.xml
