[package]
edition = "2021"
name = "minicaldav"
version = "0.2.0"
authors = ["Florian Loers"]
description = "Minimal caldav client"
readme = "README.md"
repository = "https://gitlab.com/loers/minicaldav"
license = "GPL-3.0-or-later"
keywords = ["caldav", "ical", "calendar"]
categories = ["command-line-utilities", "web-programming"]

[lib]
path = "src/lib.rs"

[[bin]]
name = "minicaldav-cli"
path = "src/bin.rs"

[features]
default = ["ical", "caldav", "cli", "ser_de"]
caldav = ["ureq"]
cli = ["rpassword", "env_logger"]
ical = []
ser_de = ["serde", "serde_json"]

[dependencies]
log = "0.4"
env_logger = { version = "0.9.0", optional = true }
ureq = { version = "2", features = ["charset", "tls"], optional = true }
xmltree = "0.10.3"
url = "2"
base64 = "0.13"
rpassword = { version = "6", optional = true }

serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }

[dev-dependencies]
tiny_http = { version = "0.11", features = ["ssl"] }
rustls = { version = "0.20" }
rustls-pemfile = "1"
once_cell = "1"
