[package]
edition = "2021"
name = "minicaldav"
version = "2.1.0"
authors = ["Florian Loers", "Joscha Loos"]
description = "Minimal caldav client"
readme = "README.md"
repository = "https://gitlab.com/floers/minicaldav"
license = "GPL-3.0-or-later"
keywords = ["caldav", "ical", "calendar"]
categories = ["command-line-utilities", "web-programming"]

[lib]
path = "src/lib.rs"

[[bin]]
name = "minicaldav-cli"
path = "src/bin.rs"

[features]
default = ["ical", "caldav"]
caldav = [ "dep:base64", "url", "dep:xmltree", "dep:log"]
cli = ["ical", "caldav", "dep:rpassword", "dep:env_logger"]
ical = ["dep:log"]
serde = ["dep:serde", "dep:serde_json", "url/serde"]

[dependencies]
log = { version = "0.4", optional = true }
xmltree = { version = "0.10.3", optional = true }
url = { version = "2", optional = true }
base64 = { version = "0.13", optional = true }

# CLI
env_logger = { version = "0.9.0", optional = true }
rpassword = { version = "7", optional = true }

# serde
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
reqwest = "0.12.15"

[dev-dependencies]
tiny_http = { version = "0.11", features = ["ssl"] }
rustls = { version = "0.20" }
rustls-pemfile = "1"
once_cell = "1"
