[package]
edition = "2021"
name = "minicaldav"
version = "3.0.0"
authors = ["Florian Loers", "Joscha Loos"]
description = "Minimal caldav client"
readme = "README.md"
repository = "https://gitlab.com/floers/minicaldav"
license = "GPL-3.0-or-later"
keywords = ["caldav", "ical", "calendar"]
categories = ["command-line-utilities", "web-programming"]

[lib]
path = "src/lib.rs"

[features]
default = ["ical", "caldav"]
caldav = [ "dep:base64", "url", "dep:xmltree", "dep:log"]
ical = ["dep:log"]

[dependencies]
log = { version = "0.4", optional = true }
xmltree = { version = "0.10.3", optional = true }
url = { version = "2", features = ["serde"], optional = true }
base64 = { version = "0.13", optional = true }

# serde
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
reqwest = "0.12.15"
icalendar = { version = "0.17.0", features = ["serde"], git = "https://github.com/jooooscha/icalendar.git", tag = "v0.17.0" }
simple_logger = "5.0.0"

[dev-dependencies]
tiny_http = { version = "0.11", features = ["ssl"] }
rustls = { version = "0.20" }
rustls-pemfile = "1"
once_cell = "1"
